:bug: make HTML field text visible in night mode
Fixes #147.

Problem:

In night mode, the default text color is set to white.
When it's rendered on the white background of form fields,
it is not visible to users.

Solution:

Explicitly set the color of form field text
in both night mode and day mode
so that it overrides the default text color.

--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -29,6 +29,7 @@ label {
 #{$all-text-inputs},
 select[multiple=multiple] {
   background-color: $field-background-color;
+  color: $field-text-color;
   border: $base-border;
   border-radius: $base-border-radius;
   box-shadow: $form-box-shadow;
