--- a/app/assets/stylesheets/themes/_night.scss
+++ b/app/assets/stylesheets/themes/_night.scss
@@ -48,3 +48,4 @@ $table-header-border-color: shade($base-border-color, 25%);
 $disabled-field-background-color: shade($base-background-color, 5%);
 $fieldset-background-color: tint($base-border-color, 75%);
 $field-background-color: $white;
+$field-text-color: $dark-gray;
